src/app/shared/components/footer/footer.component.scss
$gap: 24px;

:host {
  padding-bottom: $gap;
}

:host,
.container {
  display: grid;
  grid-gap: $gap;
}

h3 {
  margin: 0px;
  font-weight: 500;
}

.grid-col {
  display: grid;
  grid-column-gap: $gap;
  grid-row-gap: $gap - 6;
  grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
}

.follow {
  align-items: center;
}

.about {
  & > div {
    display: grid;
    align-content: start;
  }

  h3 {
    margin-bottom: 4px;
  }
}

.credits {
  display: grid;
  grid-gap: $gap/2;

  @media (min-width: 584px) {
    grid-template-columns: auto max-content;
    align-items: center;
  }
}

.links {
  display: grid;
  grid-auto-flow: column;
  grid-column-gap: 7px;
}

.icon-with-text {
  vertical-align: sub;
  font-size: 20px;
  height: 20px;
  width: 24px;
}

.small-icon-with-text {
  $size: 18px;
  height: $size;
  width: $size;
  vertical-align: sub;
  margin-right: 2px;
}

